@@ -2,6 +2,7 @@ OpenDNSSEC 2.2 - 2017-xx-xx
 
 * OPENDNSSEC-901: Enforcer would ignore <ManualKeyGeneration/> tag in conf.xml
 * OPENDNSSEC-890: Mismatching TTLs in record sets would cause bogus signatures.
+* OPENDNSSEC-908: Warn when TTL exceeds KASP's MaxZoneTTL instead of capping.
 
 OpenDNSSEC 2.1.1 - 2017-04-28
 
